--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -6,7 +6,6 @@
 \usepackage{listings}
 \usepackage{bussproofs} % proof tree
 \usepackage{xcolor} % may not be loaded here, is already loaded by Beamer
-\usepackage{bussproofs}
 \RequirePackage[a4paper, left=2cm, right=2cm, bottom=3cm, headsep=100pt]{geometry}
 \RequirePackage[small]{titlesec} % Taille des sections réduite
 \RequirePackage[pdfborderstyle={/S/U/W 0}]{hyperref} % Le paramètre retire les bordures autour des hyperliens
@@ -17,7 +16,6 @@
   Augustin \textsc{Albert} \\
   Lucas \textsc{Tabary-Maujean}
 }
-
 
 \title{\textbf{Proost: specifications}\\
   \large A small proof assistant written in Rust
@@ -32,28 +30,46 @@
 \definecolor{forestgreen}{rgb}{0,0.3,0}
 \definecolor{darkred}{rgb}{0.5,0,0}
 
+\lstdefinestyle{default}{
+    frame=tb,
+    basicstyle=\ttfamily,
+    numbers=left,
+    numbersep=5pt,
+    xrightmargin=1.5em,xleftmargin=1.5em,
+    framexleftmargin=1.7em,
+    numberstyle=\footnotesize\ttfamily\color{paleblue},
+    morestring=[d]{"},
+    morestring=[d]{'},
+    stringstyle={\color{red!50!brown}},
+    keywordstyle={\bfseries\itshape\color{dark}},
+    commentstyle=\color{gray},
+    texcl, % Back to TeX styling within *inline* comments
+    escapechar=`, % escape character for block comments
+    %escapebegin=\lst@commentstyle,
+    breaklines=true,
+    breakatwhitespace=true
+}
 \lstdefinestyle{proost}{
     style=default,
-    basicstyle=\scriptsize\ttfamily,
     numberstyle=\scriptsize\ttfamily\color{paleblue},
     comment=[l]{//},
-    keywords={fn, for, if, else, while, return},
-    keywords=[2]{reg, stack},
-    keywordstyle=[2]\color{forestgreen},
-    keywords=[3]{u64, u32},
-    keywordstyle=[3]\color{blue},
-    keywords=[4]{protect, init_msf, set_msf},
+    alsoletter={.,:,=},
+    keywords={fun, return},
+    keywordstyle=\color{forestgreen},
+    keywords=[4]{define, check, type, :=, .},
     keywordstyle=[4]\color{darkred},
 }
 \lstnewenvironment{proost}[1][]{\lstset{style=proost, #1}}{}
+
+\lstset{style=proost}
+\lstMakeShortInline[columns=flexible]¤
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Remplissage des en-têtes %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% headings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-%\AtEndDocument{\lfoot{\small{\reflectbox{\copyright} \the\year{}} }}
 \fancyhead{}
 \fancyfoot[L]{\small{\reflectbox{\copyright} \the\year{}}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,14 +97,96 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Divers %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setlength{\columnsep}{20pt} % 10 pt par défaut
-\setlength{\parskip}{1.2ex minus 1ex}
-\setlength{\parindent}{10pt}
-%\allowdisplaybreaks % Permet au environnement align d'êtres scindés sur plusieurs pages
-\bibliographystyle{abbrv}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 \thispagestyle{fancy}
 \maketitle
 
+\section{General purpose and functions}
+This project aims at providing a small tool for typechecking programs written in
+the language of the Calculus of Construction (CoC). This tool shall be
+terminal-based and provide both compiler- and toplevel-like capacities and
+options
+
+\subsection{Toplevel}
+The \texttt{proost}, when provided with no argument, is expected to behave like
+a toplevel, akin to \texttt{ocaml}, or \texttt{coqtop}. There, user is greeted with a
+prompt and may enter commands of different kinds, for instance:
+\begin{itemize}
+  \item ¤define a := t¤ defines an alias ¤a¤ that can be used in any following
+    command;
+  \item ¤check u : t¤ verifies ¤a¤ has type ¤t¤;
+  \item ¤type u¤ provides the type of ¤u¤.
+\end{itemize}
+
+Where terms are the ones permitted by the kernel expressivity.
+More shorthands may be provided later for user convenience.
+
+\subsection{Checker}
+When provided with existing file paths, ¤proost¤ intends to typecheck them in
+order, that is, reading them as successive inputs in the toplevel. Further
+features for this \emph{might} include a more extended notion of ``modules'', where files
+may refer to one another and provide scopes. Efforts will likely not be put on
+this.
+
+The file extension is \texttt{.mdln}, which is short for \emph{madelaine}.
+Madelaine also denotes the language manipulated by users in these files.
+
+\section{Project structure}
+Each category of the project is assigned some or all members of the group,
+meaning the assignees will \emph{mainly} make progress in the associated categories
+and review the corresponding advancements. Any member may regardless contribute to any part
+of the development of the tool.
+
+Some specific categories and items will be added a star (\(*\)) or two (\(**\)) to
+indicate respectively whether they are late requirements (for the last release)
+or extra requirements that will be considered only if there is enough time.
+
+
+\subsection{Kernel  \hfill\scriptsize all members}
+The kernel manipulates \(\lambda\)-terms in the Calculus of Construction and is
+expected to store and manage them with a relative level of efficiency.
+The type theory used to build the terms will be successively extended with:
+\begin{itemize}
+  \item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
+  \item \(*\) \(\Sigma\)-types, equality types, natural numbers;
+  \item \(**\) extraction;
+  \item \(**\) lists, records, accessibility predicate.
+\end{itemize}
+
+\subsubsection{Optimisation \hfill\scriptsize VL LTM}
+Extra care must be put into designing an efficient memory management model for
+the kernel, along with satisfactory typing and reduction algorithms.
+
+
+\subsection{Unification \hfill\scriptsize ArA LTM}
+Early versions of the tool may require the user to explicit every type at play.
+Successive versions may gradually include unification tools (meta-variables)
+of better quality to assist the user and alleviate some of their typing-annotation
+burden.
+
+% TODO provide some examples
+
+
+\subsection{Parsing \hfill\scriptsize AuA VL}
+The parsing approach is straightforward and relies on external libraries. The
+parser is expected to keep adapting to changes made in the term definitions and
+unification capability.
+
+
+\subsection{Language design \hfill\scriptsize all members}
+The \texttt{proost} tool is a simple proof assistant and does not provide any
+tactics. As new features arrive from extensions of the kernel type theory, the
+\emph{madelaine} language must provide convenient shorthands and notations. See
+the following examples:
+
+% TODO examples
+
+
+\subsection{\(*\) LSP \hfill\scriptsize VL}
+The tool may provide an implementation of the Language Server Protocol in
+order to provide linting and feedback during an editing session.
+
+% TODO elaborate, maybe
 \end{document}
