--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -35,8 +35,7 @@
     basicstyle=\ttfamily,
     numbers=left,
     numbersep=5pt,
-    xrightmargin=1.5em,xleftmargin=1.5em,
-    framexleftmargin=1.7em,
+    leftmargin=1.5em,
     numberstyle=\footnotesize\ttfamily\color{paleblue},
     morestring=[d]{"},
     morestring=[d]{'},
@@ -52,12 +51,14 @@
 \lstdefinestyle{proost}{
     style=default,
     numberstyle=\scriptsize\ttfamily\color{paleblue},
-    comment=[l]{//},
+    comment=[l]{#},
     alsoletter={.,:,=},
-    keywords={fun, return},
+    keywords={fun, if},
     keywordstyle=\color{forestgreen},
-    keywords=[4]{define, check, type, :=, .},
-    keywordstyle=[4]\color{darkred},
+    keywords={P, T, U},
+    keywordstyle=\color{darkred},
+    keywords=[3]{define, check, type, :=, .},
+    keywordstyle=[3]\color{darkred},
 }
 \lstnewenvironment{proost}[1][]{\lstset{style=proost, #1}}{}
 
@@ -103,15 +104,22 @@
 \thispagestyle{fancy}
 \maketitle
 
+\emph{
+  This project is under development, and its specifications themselves are
+  subject to changes, should time be an issue or a general consensus be reached
+  to change the purposes of the tool. An example of that is the syntax of
+  the language, which is still largely unstable.
+}
+
 \section{General purpose and functions}
-This project aims at providing a small tool for typechecking programs written in
+This project aims at providing a small tool for typechecking expressions written in
 the language of the Calculus of Construction (CoC). This tool shall be
 terminal-based and provide both compiler- and toplevel-like capacities and
-options
+options.
 
 \subsection{Toplevel}
-The \texttt{proost}, when provided with no argument, is expected to behave like
-a toplevel, akin to \texttt{ocaml}, or \texttt{coqtop}. There, user is greeted with a
+The \texttt{proost} command, when provided with no argument, is expected to behave like
+a toplevel, akin to \texttt{ocaml} or \texttt{coqtop}. There, user is greeted with a
 prompt and may enter commands of different kinds, for instance:
 \begin{itemize}
   \item ¤define a := t¤ defines an alias ¤a¤ that can be used in any following
@@ -127,20 +135,20 @@ More shorthands may be provided later for user convenience.
 When provided with existing file paths, ¤proost¤ intends to typecheck them in
 order, that is, reading them as successive inputs in the toplevel. Further
 features for this \emph{might} include a more extended notion of ``modules'', where files
-may refer to one another and provide scopes. Efforts will likely not be put on
-this.
+may refer to one another and provide scopes.
 
 The file extension is \texttt{.mdln}, which is short for \emph{madelaine}.
 Madelaine also denotes the language manipulated by users in these files.
 
 \section{Project structure}
 Each category of the project is assigned some or all members of the group,
-meaning the assignees will \emph{mainly} make progress in the associated categories
+meaning the designated members will \emph{mainly} make progress in the associated categories
 and review the corresponding advancements. Any member may regardless contribute to any part
 of the development of the tool.
 
 Some specific categories and items will be added a star (\(*\)) or two (\(**\)) to
-indicate respectively whether they are late requirements (for the last release)
+indicate whether they are respectively late requirements (for the last release
+due in December)
 or extra requirements that will be considered only if there is enough time.
 
 
@@ -166,8 +174,6 @@ Successive versions may gradually include unification tools (meta-variables)
 of better quality to assist the user and alleviate some of their typing-annotation
 burden.
 
-% TODO provide some examples
-
 
 \subsection{Parsing \hfill\scriptsize AuA VL}
 The parsing approach is straightforward and relies on external libraries. The
@@ -181,7 +187,31 @@ tactics. As new features arrive from extensions of the kernel type theory, the
 \emph{madelaine} language must provide convenient shorthands and notations. See
 the following examples:
 
-% TODO examples
+Without any unification and only elementary type theory:
+\begin{proost}
+# Construction of natural numbers
+define Nat := \/ A: U ->
+  \/ _: (\/ _: A -> A) -> \/ _: A -> A
+
+define z := /\ A: U ->
+  /\ f: (\/ _: A -> A) -> /\ x: A -> x
+check z: Nat
+
+define succ := /\ n: Nat -> /\ A: U ->
+  /\ f: (\/ _: A -> A) -> /\ x: A ->
+  f (n f x)
+check succ: \/ _: Nat -> Nat
+\end{proost}
+
+Further changes, with equality types, natural numbers and adequate axioms may
+look like:
+\begin{proost}
+# with unification
+define comm := \/ x -> \/ y -> x + y = y + x
+
+# Existential types
+define t := E n, n * n - n + 4 = 0
+\end{proost}
 
 
 \subsection{\(*\) LSP \hfill\scriptsize VL}
