--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -147,7 +147,7 @@ tactics. As new features arrive from extensions of the kernel type theory, the
   \item ¤eval u¤ provides the definition of ¤u¤.
 \end{itemize}
 
-Below is an overview of the syntax of terms, as of now and in potential future iterations. The syntax is strongly inspired by that of Ocaml. Commentary are defined using the keyword \texttt{//}.
+Below is an overview of the syntax of terms, as of now and in potential future iterations. The syntax is strongly inspired by that of Ocaml. Comments are defined using the keyword \texttt{//}.
 
 \vspace{1.5mm}
 elementary type theory:
@@ -197,10 +197,10 @@ order, that is, reading them as successive inputs in the toplevel. Further featu
 
 
 \subsection{Parsing \members{AuA}}
-The parsing approach is straightforward and relies on external libraries. The parser is expected to keep adapting to changes made in the term definitions and unification capability. The parser is thoroughly tested to guarantee full coverage in order to ease this continuous transition.
+The parsing approach is straightforward and relies on external libraries. The parser is expected to keep adapting to changes made in the term definitions and unification capability. The parser is thoroughly tested to guarantee full coverage.
 
 
-\subsection{Kernel \members{all members}} %TODO
+\subsection{Kernel \members{all members}}
 The kernel manipulates \(\lambda\)-terms in the Calculus of Construction and is expected to store and manage them with a relative level of efficiency. The type theory used to build the terms will be successively extended with:
 \begin{itemize}
   \item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
@@ -220,6 +220,10 @@ Early versions of the tool may require the user to explicit every type at play.
 Successive versions may gradually include unification tools (meta-variables)
 of better quality to assist the user and alleviate some of their typing-annotation
 burden.
+
+\subsection{Developpement tools \members{VL LTM}}
+Tests are mandatory in every part of the project. A tool originally developed by the Mozilla team was modified to allow for a more precise branch coverage of the project.
+The Nix framework is used to automatically build and package the application as well as generating a docker image and providing developers tools of the same version.
 
 % TODO elaborate, maybe
 \end{document}
