feat(docs): fix OCaml type and english

--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -147,7 +147,7 @@ tactics. As new features arrive from extensions of the kernel type theory, the
   \item ¤eval u¤ provides the definition of ¤u¤.
 \end{itemize}
 
-Below is an overview of the syntax of terms, as of now and in potential future iterations. The syntax is strongly inspired by that of Ocaml. Comments are defined using the keyword \texttt{//}.
+Below is an overview of the syntax of the terms, both present and future. The syntax is strongly inspired by that of OCaml. Comments are defined using the keyword \texttt{//}.
 
 \vspace{1.5mm}
 elementary type theory:
