--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -5,7 +5,8 @@
 \usepackage{fancyhdr}
 \usepackage{listings}
 \usepackage{bussproofs} % proof tree
-\usepackage{xcolor} % may not be loaded here, is already loaded by Beamer
+\usepackage[dvipsnames]{xcolor}
+\usepackage{graphicx}
 \RequirePackage[a4paper, left=2cm, right=2cm, bottom=3cm, headsep=100pt]{geometry}
 \RequirePackage[small]{titlesec} % Taille des sections réduite
 \RequirePackage[pdfborderstyle={/S/U/W 0}]{hyperref} % Le paramètre retire les bordures autour des hyperliens
@@ -35,11 +36,9 @@
     basicstyle=\ttfamily,
     numbers=left,
     numbersep=5pt,
-    leftmargin=1.5em,
+    xleftmargin=1.5em,
+    framexleftmargin=1em,
     numberstyle=\footnotesize\ttfamily\color{paleblue},
-    morestring=[d]{"},
-    morestring=[d]{'},
-    stringstyle={\color{red!50!brown}},
     keywordstyle={\bfseries\itshape\color{dark}},
     commentstyle=\color{gray},
     texcl, % Back to TeX styling within *inline* comments
@@ -49,15 +48,15 @@
     breakatwhitespace=true
 }
 \lstdefinestyle{proost}{
+    alsoletter={//,.,:,=},
     style=default,
     numberstyle=\scriptsize\ttfamily\color{paleblue},
-    comment=[l]{#},
-    alsoletter={.,:,=},
+    comment=[l]{//},
     keywords={fun, if},
     keywordstyle=\color{forestgreen},
-    keywords={P, T, U},
+    keywords={Prop, Type},
     keywordstyle=\color{darkred},
-    keywords=[3]{define, check, type, :=, .},
+    keywords=[3]{def, check, eval, import},
     keywordstyle=[3]\color{darkred},
 }
 \lstnewenvironment{proost}[1][]{\lstset{style=proost, #1}}{}
@@ -98,7 +97,13 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Divers %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setlength{\columnsep}{20pt} % 10 pt par défaut
+
+\newcommand{\members}[1]{\texorpdfstring{\hfill\scriptsize #1}{}}
+
+\newcommand{\etun}{({\color{Green} $\star$}) }
+\newcommand{\etde}{({\color{Orange} $\star\star$}) }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \begin{document}
 \thispagestyle{fancy}
@@ -114,31 +119,9 @@
 \section{General purpose and functions}
 This project aims at providing a small tool for typechecking expressions written in
 the language of the Calculus of Construction (CoC). This tool shall be
-terminal-based and provide both compiler- and toplevel-like capacities and
-options.
+both terminal and editor based through the \texttt{proost} program that provides both compiler and toplevel-like capacities and options and a LSP called \texttt{tilleul}.
+The file extension used by both programs is \texttt{.mdln}, which is short for \emph{madelaine}, the name of the language manipulated by users in these files.
 
-\subsection{Toplevel}
-The \texttt{proost} command, when provided with no argument, is expected to behave like
-a toplevel, akin to \texttt{ocaml} or \texttt{coqtop}. There, user is greeted with a
-prompt and may enter commands of different kinds, for instance:
-\begin{itemize}
-  \item ¤define a := t¤ defines an alias ¤a¤ that can be used in any following
-    command;
-  \item ¤check u : t¤ verifies ¤a¤ has type ¤t¤;
-  \item ¤type u¤ provides the type of ¤u¤.
-\end{itemize}
-
-Where terms are the ones permitted by the kernel expressivity.
-More shorthands may be provided later for user convenience.
-
-\subsection{Checker}
-When provided with existing file paths, ¤proost¤ intends to typecheck them in
-order, that is, reading them as successive inputs in the toplevel. Further
-features for this \emph{might} include a more extended notion of ``modules'', where files
-may refer to one another and provide scopes.
-
-The file extension is \texttt{.mdln}, which is short for \emph{madelaine}.
-Madelaine also denotes the language manipulated by users in these files.
 
 \section{Project structure}
 Each category of the project is assigned some or all members of the group,
@@ -146,77 +129,116 @@ meaning the designated members will \emph{mainly} make progress in the associate
 and review the corresponding advancements. Any member may regardless contribute to any part
 of the development of the tool.
 
-Some specific categories and items will be added a star (\(*\)) or two (\(**\)) to
+Some specific categories and items will be added a star \etun or two \etde to
 indicate whether they are respectively late requirements (for the last release
 due in December)
 or extra requirements that will be considered only if there is enough time.
 
-
-\subsection{Kernel  \hfill\scriptsize all members}
-The kernel manipulates \(\lambda\)-terms in the Calculus of Construction and is
-expected to store and manage them with a relative level of efficiency.
-The type theory used to build the terms will be successively extended with:
+\subsection{Language design \members{all members}}
+The \texttt{proost} tool is a simple proof assistant and does not provide any
+tactics. As new features arrive from extensions of the kernel type theory, the
+\emph{madelaine} language must provide convenient shorthands and notations. The syntax of commands is the following:
 \begin{itemize}
-  \item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
-  \item \(*\) \(\Sigma\)-types, equality types, natural numbers;
-  \item \(**\) extraction;
-  \item \(**\) lists, records, accessibility predicate.
+  \item \etun¤import relative_path_to_file¤ typecheck and load the the file in the current environment;
+  \item ¤def a := t¤ defines an alias ¤a¤ that can be used in any following command;
+  \item ¤def a : ty := t¤ defines an alias ¤a¤ that is checked to be of type ¤ty¤;
+  \item ¤check u : t¤ verifies ¤u¤ has type ¤t¤;
+  \item ¤check u¤ provides the type of ¤u¤;
+  \item ¤eval u¤ provides the definition of ¤u¤.
 \end{itemize}
 
-\subsubsection{Optimisation \hfill\scriptsize VL LTM}
+Below is an overview of the syntax of the terms, both present and future. The syntax is strongly inspired by that of OCaml. Comments are defined using the keyword \texttt{//}.
+
+\vspace{1.2mm}
+elementary type theory:
+\begin{proost}
+// Construction of natural numbers
+def Nat :=
+  (N: Type) -> (N -> N) -> N -> N
+
+def z := fun N:Type =>
+  fun f:(N -> N), x:N => x
+check z : Nat
+
+def succ := fun n: Nat, N: Type =>
+  fun f: (N -> N), x: N => f (n N f x)
+check succ : Nat -> Nat
+\end{proost}
+
+\etun universe polymorphism:
+\begin{proost}
+def foo.{i,j} : Type (max i j) + 1
+:= Type i -> Type j
+\end{proost}
+
+\etde unification:
+\begin{proost}
+def comm := \/ x,y, x + y = y + x
+\end{proost}
+
+\etde existential types:
+\begin{proost}
+def t := E n, n * n - n + 4 = 0
+\end{proost}
+
+
+\subsection{Toplevel  \members{AuA}}
+The \texttt{proost} command, when provided with no argument, is expected to behave like a toplevel, akin to \texttt{ocaml} or \texttt{coqtop}. There, user is greeted with a prompt and may enter commands. When provided with existing file paths, ¤proost¤ intends to typecheck them in
+order, that is, reading them as successive inputs in the toplevel. Further features for this \emph{might} include a more extended notion of ``modules'' where files may provides scopes.
+{
+  \begin{center}
+    \fbox{\includegraphics{proost.png}}
+  \end{center}
+}
+
+
+\subsection{\etun LSP \members{VL}}
+\texttt{tilleul} shall provide an implementation of the Language Server Protocol in order to provide linting and feedback during an editing session.
+
+
+\subsection{Parsing \members{AuA}}
+The parsing approach is straightforward and relies on external libraries. The parser is expected to keep adapting to changes made in the term definitions and unification capability. The parser is thoroughly tested to guarantee full coverage.
+
+
+\subsection{Kernel \members{all members}}
+The kernel manipulates \(\lambda\)-terms in the Calculus of Construction and is expected to store and manage them with a relative level of efficiency. The type theory used to build the terms will be successively extended with:
+\begin{itemize}
+  \item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
+  \item \etun universe polymorphism;
+  \item \etun \(\Sigma\)-types, equality types, natural numbers;
+  \item \etde extraction;
+  \item \etde lists, records, accessibility predicate.
+\end{itemize}
+
+
+\subsection{\etun Optimisation \members{ArA LTM}}
 Extra care must be put into designing an efficient memory management model for
 the kernel, along with satisfactory typing and reduction algorithms.
 
+In particular, the first iteration of the program manipulates directly terms on
+the heap, with no particular optimisation: every algorithm is applied soundly
+but naively.
 
-\subsection{Unification \hfill\scriptsize ArA LTM}
+A first refactor of the memory model includes using a common memory location for
+terms, ensuring invariant like unicity of a term in memory, providing laziness
+and storing results of the most expensive functions \emph{(memoizing)}.
+This model also provides stronger isolation properties, preventing several
+memory pools (\emph{arena} is the technical term used in the project) from
+interacting with one another.
+
+This can
+be further extended with other invariants like ensuring every term in memory is
+in weak head normal form.
+
+\subsection{\etde Unification}
 Early versions of the tool may require the user to explicit every type at play.
 Successive versions may gradually include unification tools (meta-variables)
 of better quality to assist the user and alleviate some of their typing-annotation
 burden.
 
-
-\subsection{Parsing \hfill\scriptsize AuA VL}
-The parsing approach is straightforward and relies on external libraries. The
-parser is expected to keep adapting to changes made in the term definitions and
-unification capability.
-
-
-\subsection{Language design \hfill\scriptsize all members}
-The \texttt{proost} tool is a simple proof assistant and does not provide any
-tactics. As new features arrive from extensions of the kernel type theory, the
-\emph{madelaine} language must provide convenient shorthands and notations. See
-the following examples:
-
-Without any unification and only elementary type theory:
-\begin{proost}
-# Construction of natural numbers
-define Nat := \/ A: U ->
-  \/ _: (\/ _: A -> A) -> \/ _: A -> A
-
-define z := /\ A: U ->
-  /\ f: (\/ _: A -> A) -> /\ x: A -> x
-check z: Nat
-
-define succ := /\ n: Nat -> /\ A: U ->
-  /\ f: (\/ _: A -> A) -> /\ x: A ->
-  f (n f x)
-check succ: \/ _: Nat -> Nat
-\end{proost}
-
-Further changes, with equality types, natural numbers and adequate axioms may
-look like:
-\begin{proost}
-# with unification
-define comm := \/ x -> \/ y -> x + y = y + x
-
-# Existential types
-define t := E n, n * n - n + 4 = 0
-\end{proost}
-
-
-\subsection{\(*\) LSP \hfill\scriptsize VL}
-The tool may provide an implementation of the Language Server Protocol in
-order to provide linting and feedback during an editing session.
+\subsection{Developpement tools \members{VL LTM}}
+Tests are mandatory in every part of the project. A tool originally developed by the Mozilla team was modified to allow for a more precise branch coverage of the project.
+The Nix framework is used to automatically build and package the application as well as generating a docker image and providing developers tools of the same version.
 
 % TODO elaborate, maybe
 \end{document}
